# python-template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/tests/: test_init.py
tests/: test_init.py
