[project]
name = "python-template"
version = "0.1.0"
description = "Python Template with Rye"
authors = [
    { name = "naoki-maeda", email = "infrontofden@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
main = "python_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.275",
    "black~=23.3.0",
    "isort~=5.12.0",
    "pytest~=7.4.0",
    "pre-commit~=3.3.3",
    "mypy~=1.4.1",
]

[tool.rye.scripts]
format = { chain = ["black src/", "isort src/"] }
lint = { chain = ["black --check src/", "ruff check src/", "mypy src/"] }
test = { chain = ["pytest src/tests/"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "ALL"
]
ignore = ["ANN101", "B008", "D100", "D103", "D104", "D107", "D203", "D213", "FBT001", "FBT002", "PLR0913", "S101", "T201"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
